MasteringMCU2/.metadata/.plugins/org.eclipse.cdt.ui/timer_OC_1_myself.build.log
16:15:38 **** Incremental Build of configuration Debug for project timer_OC_1_myself ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_hal_msp.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32f4xx_hal_msp.d" -MT"Core/Src/stm32f4xx_hal_msp.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_hal_msp.o"
../Core/Src/stm32f4xx_hal_msp.c:220:6: error: redefinition of 'HAL_MspInit'
  220 | void HAL_MspInit(void)
      |      ^~~~~~~~~~~
../Core/Src/stm32f4xx_hal_msp.c:65:6: note: previous definition of 'HAL_MspInit' with type 'void(void)'
   65 | void HAL_MspInit(void)
      |      ^~~~~~~~~~~
../Core/Src/main.c: In function 'SystemClock_Config_HSE':
../Core/Src/main.c:316:18: error: 'RCC_PLLInitTypeDef' has no member named 'PLLR'; did you mean 'PLLM'?
  316 |     Osc_Init.PLL.PLLR = 2;
      |                  ^~~~
      |                  PLLM
../Core/Src/main.c:331:18: error: 'RCC_PLLInitTypeDef' has no member named 'PLLR'; did you mean 'PLLM'?
  331 |     Osc_Init.PLL.PLLR = 2;
      |                  ^~~~
      |                  PLLM
../Core/Src/main.c: In function 'TIMER2_Init':
../Core/Src/main.c:412:9: error: 'htimer2' undeclared (first use in this function); did you mean 'htim2'?
  412 |         htimer2.Instance = TIM2;
      |         ^~~~~~~
      |         htim2
../Core/Src/main.c:412:9: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/stm32f4xx_hal_msp.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

16:15:39 Build Failed. 7 errors, 0 warnings. (took 853ms)

